--- a/projects/angular-sdk/src/components/cfar-offer-banner/cfar-offer-banner.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-banner/cfar-offer-banner.component.html
@@ -17,8 +17,7 @@
                     </div>
 
                     <ng-container *ngFor="let desc of cheapestOffer?.offerDescription; let i = index;">
-                        <!-- DIRTY FIX : Hide the second description -->
-                        <div class="py-16" *ngIf="i != 1" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
+                        <div class="py-16" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
                             <mat-icon class="check-icon">check</mat-icon>
                             <span>{{ desc }}</span>
                         </div>
