--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -6,9 +6,8 @@
     
             <div fxFlex="100" fxLayout="row wrap">
 
-                <div fxFlex="100" fxLayout="row" fxLayoutAlign="space-between center">
+                <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center">
                     <h2 class="offer-title px-16 m-0">{{ 'CFAR_OFFER_BANNER_LARGE.TITLE' | translate }}</h2>
-                    <img class="powered-by-image" src="assets/powered-by-hopper.svg" />
                 </div>
 
                 <div class="mb-32" fxFlex="100" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="16px">
@@ -43,7 +42,7 @@
                         <div fxFlex="100" fxLayout="row" fxLayoutGap="16px" fxLayout.lt-md="column" fxLayoutAlign="start center"
                             fxLayoutAlign.lt-md="center start">
 
-                            <div fxFlex [ngClass]="{'vertical-separator': (i % 2) == 0}" fxLayout="row wrap" fxLayoutAlign="start start" *ngFor="let offer of cfarOffers; let i = index;">
+                            <div fxFlex class="offer-choice" fxLayout="row wrap" fxLayoutAlign="start start" *ngFor="let offer of cfarOffers; let i = index;">
                                 <mat-radio-button fxFlex="100" value="{{ i }}" class="important-text bold">
                                     {{ 'CFAR_OFFER_BANNER_LARGE.COVERAGE_PERCENTAGE' | translate: 
                                         { coverage: (computePercentage(offer) | percent) }
@@ -65,6 +64,11 @@
                     </mat-radio-group>
     
                 </div>
+
+                <div fxFlex="100" fxLayout="row" fxLayoutAlign="end center">
+                    <img class="powered-by-image" src="assets/powered-by-hopper.svg" />
+                </div>
+                
             </div>
 
         </mat-card>
