--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.scss
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.scss
@@ -71,8 +71,9 @@
                 color: map-get($primary-palette, default);
             }
 
-            .vertical-separator {
-                border-right: 2px solid map-get($accent-palette, 300);
+            .offer-choice {
+                border-left: 2px solid map-get($accent-palette, 300);
+                padding-left: 16px;
 
                 @include media-breakpoint('lt-md') {
                     border: none;
