--- a/projects/angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.scss
+++ b/projects/angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.scss
@@ -46,6 +46,11 @@
         }
 
         .mat-dialog-content {
+            @include media-breakpoint('lt-sm') {
+                // Full-height - mat-dialog-title height
+                max-height: calc(100% - 100px);
+            }
+
             &.sidebar-mode {
                 // Full-height - mat-dialog-title height
                 max-height: calc(100% - 100px);
@@ -76,8 +81,21 @@
                 text-transform: capitalize;
             }
 
-            .rotate-90 {
+            .flight-icon {
                 transform: rotate(90deg);
+                font-size: 32px;
+                width: 32px;
+                height: 32px;
+            }
+
+            .decorative-stroke {
+                height: 2px;
+                background-color: map-get($primary-palette, default);
+                width: 100%;
+            }
+
+            .itinerary-container {
+                border-right: 1px solid map-get($accent-palette, 300);
             }
 
             mat-card {
@@ -128,6 +146,11 @@
                 border-radius: 50%;
                 padding: 8px;
                 color: white;
+            }
+
+            .origin-destination {
+                font-weight: bold;
+                font-size: 1.6rem;
             }
 
             // Hyperwallet
