--- a/src/app/pages/guides/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/src/app/pages/guides/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -10,6 +10,7 @@
                     [isFakeBackend]="isFakeBackend"
                     [basePath]="basePath"
                     [hasNoCoverageOption]="hasNoCoverageOption"
+                    [hasWarningCoverageMessage]="hasWarningCoverageMessage"
                     [currentLang]="currentLang"
                     [hCSessionId]="hCSessionId"
                     [itineraries]="itineraries"
