--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.scss
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.scss
@@ -83,6 +83,17 @@
             a {
                 color: map-get($primary-palette, default);
             }
+
+            .warning-message {
+                @if ($is-dark == false) {
+                    background: map-get($warn-palette, 50);
+                }
+                
+                border: 1px solid map-get($warn-palette, default);
+                width: 100%;
+                text-align: center;
+                color: map-get($warn-palette, default);
+            }
         }
     }
 }
