--- a/projects/angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.scss
+++ b/projects/angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.scss
@@ -116,6 +116,11 @@
                 }
             }
 
+            .resent-code-label {
+                font-size: 11px;
+                cursor: pointer;
+            }
+
             .error-message {
                 @if ($is-dark == false) {
                     background: map-get($warn-palette, 50);
