--- a/src/app/pages/guides/cfar-exercise-dialog/cfar-exercise-dialog.component.html
+++ b/src/app/pages/guides/cfar-exercise-dialog/cfar-exercise-dialog.component.html
@@ -1,7 +1,8 @@
 <div class="cfar-exercise-dialog-page-container p-32" fxLayout="row wrap" fxLayoutAlign="start start">
 
     <p fxFlex="100">This page is displayed to the User following the successful retrieval of a CFAR contract for a booking eligible to the refund.
-        The User gets a display of the booking’s itinerary that can be cancelled and is prompted to choose the refund type.</p>
+        The User gets a display of the booking’s itinerary that can be cancelled and is prompted to choose the refund type.<br />
+        A one-time password will be asked to authenticate the user before processing an exercise.</p>
 
     <mat-tab-group fxFlex="100" backgroundColor="primary" class="tab-group mb-16">
 
