--- a/src/app/pages/guides/cfar-exercise-dialog/cfar-exercise-dialog.component.scss
+++ b/src/app/pages/guides/cfar-exercise-dialog/cfar-exercise-dialog.component.scss
@@ -34,8 +34,9 @@
                     background-color: map-get($bg-palette, card);
 
                     .hljs {
-                        max-width: 90%;
+                        width: calc(90% - 32px);
                         padding: 0px;
+                        margin: 16px;
                     }
                 }
             }
