--- a/src/app/pages/guides/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/src/app/pages/guides/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -9,6 +9,7 @@
                 <hopper-cfar-offer-banner-large
                     [isFakeBackend]="isFakeBackend"
                     [basePath]="basePath"
+                    [imageBasePath]="imageBasePath"
                     [hasNoCoverageOption]="hasNoCoverageOption"
                     [hasWarningCoverageMessage]="hasWarningCoverageMessage"
                     [currentLang]="currentLang"
