--- a/src/app/pages/guides/cfar-offer-banner/cfar-offer-banner.component.html
+++ b/src/app/pages/guides/cfar-offer-banner/cfar-offer-banner.component.html
@@ -10,6 +10,7 @@
                 <hopper-cfar-offer-banner
                     [isFakeBackend]="isFakeBackend"
                     [basePath]="basePath"
+                    [imageBasePath]="imageBasePath"
                     [currentLang]="currentLang"
                     [hCSessionId]="hCSessionId"
                     [itineraries]="itineraries"
