--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -13,7 +13,7 @@
                 <div class="mb-32" fxFlex="100" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="16px">
     
                     <div fxFlex="calc(20% - 16px)" fxHide.lt-md fxLayout="row" fxLayoutAlign="center center" class="p-16" ngClass.lt-sm="px-0">
-                        <img class="responsive-image" src="assets/offer-banner-icon.svg">
+                        <img class="responsive-image" src="{{ imageBasePath || '' }}assets/offer-banner-icon.svg">
                     </div>
     
                     <div fxFlex="80" fxFlex.lt-md="100" fxLayout="column" fxLayoutGap="16px" fxLayoutAlign="center start">
