--- a/projects/angular-sdk/src/components/cfar-offer-banner/cfar-offer-banner.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-banner/cfar-offer-banner.component.html
@@ -7,7 +7,7 @@
             <div fxFlex="100" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="16px">
     
                 <div fxFlex="calc(20% - 16px)" fxHide.lt-md fxLayout="row" fxLayoutAlign="center center" class="p-16" ngClass.lt-sm="px-0">
-                    <img src="assets/offer-banner-icon.svg">
+                    <img src="{{ imageBasePath || '' }}assets/offer-banner-icon.svg">
                 </div>
 
                 <div fxFlex="60" fxFlex.lt-md="100" fxLayout="column" fxLayoutAlign="center start">
