--- a/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <div fxFlex="100" class="powered-by-container">
-        <img class="powered-by-image" src="assets/powered-by-hopper.svg" />
+        <img class="powered-by-image" src="{{ imageBasePath || '' }}assets/powered-by-hopper.svg" />
     </div>
 
 </div>
