--- a/src/app/pages/guides/cfar-offer-banner-large/cfar-offer-banner-large.component.scss
+++ b/src/app/pages/guides/cfar-offer-banner-large/cfar-offer-banner-large.component.scss
@@ -34,8 +34,9 @@
                     background-color: map-get($bg-palette, card);
 
                     .hljs {
-                        max-width: 90%;
+                        width: calc(90% - 32px);
                         padding: 0px;
+                        margin: 16px;
                     }
                 }
             }
