--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="main-container" fxLayout="column" fxLayoutAlign="start stretch">
+<div class="app-container" fxLayout="column" fxLayoutAlign="start stretch">
   <app-navbar fxFlex="64px" class="mat-elevation-z6"></app-navbar>
   <router-outlet></router-outlet>
 </div>
