--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,15 +21,9 @@
 
     // ----------------------------------------------
 
-    :host {
-        font-size: 52px;
-        
+    app-root {
         .app-container {
-            height: 100vh !important;
-    
-            app-navbar {
-                @include mat-elevation(12);
-            }
+            height: 100vh;
         }
     }
 }
