--- a/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.html
+++ b/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.html
@@ -89,7 +89,7 @@
         
                             <mat-divider></mat-divider>
         
-                            <div class="p-16" ngClass.lt-md="px-16" fxLayout="row" fxLayoutAlign="start start"
+                            <div class="p-16" ngClass.lt-md="px-16" fxLayout="row" fxLayout.lt-sm="column" fxLayoutAlign="start start"
                                 fxLayoutGap="16px"
                             >
                                 <div fxFlex class="itinerary-container" fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="32px">
@@ -419,7 +419,7 @@
         
                             <mat-divider></mat-divider>
         
-                            <div class="p-16" ngClass.lt-md="px-16" fxLayout="row" fxLayoutAlign="start start"
+                            <div class="p-16" ngClass.lt-md="px-16" fxLayout="row" fxLayout.lt-sm="column" fxLayoutAlign="start start"
                                 fxLayoutGap="16px"
                             >
                                 <div fxFlex class="itinerary-container" fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="32px">
