--- a/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.scss
+++ b/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.scss
@@ -85,6 +85,7 @@
                 @include media-breakpoint('lt-sm') {
                     border-right: none;
                     border-bottom: 1px solid map-get($fg-palette, divider);
+                    padding-bottom: 16px;
                 }
             }
 
