--- a/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.scss
+++ b/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.scss
@@ -96,6 +96,11 @@
                     font-style: bold;
                     color: map-get($fg-palette, "secondary-text")
                 }
+
+                .price-per-traveler {
+                    font-weight: bold;
+                    margin-right: 8px;
+                }
             }
         }
 
