--- a/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.html
+++ b/projects/angular-sdk/src/components/cfar-exercise-flow/cfar-exercise-flow.component.html
@@ -1,9 +1,9 @@
-<div class="px-32" ngClass.lt-md="px-16" fxLayout="row" fxLayoutAlign="center center">
+<div ngClass.gt-md="px-32" ngClass.gt-sm="px-16" ngClass.lt-md="px-0" fxLayout="row" fxLayoutAlign="center center">
 
-    <mat-card class="mat-elevation-z4 m-16 pointer" fxFlex fxLayout="row wrap">
+    <mat-card class="mat-elevation-z4 pointer" ngClass.gt-sm="m-16" fxFlex fxLayout="row wrap">
     
         <div fxFlex="100" class="header" fxLayout="row" fxLayoutAlign="center center">
-            <h1>{{ 'CFAR_EXERCISE_FLOW.TITLE' | translate }}</h1>
+            <h2>{{ 'CFAR_EXERCISE_FLOW.TITLE' | translate }}</h2>
         </div>
 
         <div fxFlex="100" class="content" fxLayout="row wrap" #stepperContentAnchor>
